[package]
name = "deque"
description = "A (mostly) lock-free concurrent work-stealing deque"
version = "0.1.4"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Samuel Fredrickson <kinghajj@gmail.com>"]
readme = "README.md"
# see also LICENSE-APACHE
license-file = "LICENSE-MIT"
homepage = "https://github.com/kinghajj/deque"
repository = "http://github.com/kinghajj/deque.git"
keywords = ["concurrent", "deque"]
