[package]
name = "deque"
description = "A (mostly) lock-free concurrent work-stealing deque"
version = "0.2.3"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Samuel Fredrickson <kinghajj@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
readme = "README.md"
# see also LICENSE-APACHE
license-file = "LICENSE-MIT"
homepage = "https://github.com/kinghajj/deque"
repository = "http://github.com/kinghajj/deque.git"
keywords = ["concurrent", "deque"]

[dependencies]
rand = "0.3.*"
