[package]
name = "deque"
description = "A (mostly) lock-free concurrent work-stealing deque"
version = "0.3.2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Samuel Fredrickson <kinghajj@gmail.com>", "Linus Färnstrand <faern@faern.net>", "Amanieu d'Antras <amanieu@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
homepage = "https://github.com/kinghajj/deque"
repository = "http://github.com/kinghajj/deque.git"
keywords = ["concurrent", "deque"]

[dev-dependencies]
rand = "0.3.*"
